# GPU-Switcher

./: .gitignore  CMakeLists.txt  GPU-Switcher.manifest  LICENSE  README.md  dummy_tray.cpp  main.cpp  nvapi_interface.h
.github/workflows/: build.yml  generate-icons.yml
src/: main.cpp  resource.h  resource.rc
src/gpu/: gpu_detection.cpp  gpu_detection.h  gpu_render_probe.cpp  gpu_render_probe.h  gpu_state.h  gpu_vendor.h
src/tray/: tray_icon.cpp  tray_icon.h  tray_menu.cpp  tray_menu.h
src/util/: logging.cpp  logging.h  reset.cpp  reset.h  startup.cpp  startup.h
src/win/: win_helpers.cpp  win_helpers.h
